--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,21 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>6.0.0.Alpha7</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.3.0.CR1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.10.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
             <version>42.6.0</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
